# To-Do-App

./: .eslintrc.cjs  .gitignore  .lintstagedrc.json  .prettierignore  BUG_FIXES.md  DEPLOYMENT_QUICKSTART.md  DROPDOWN_ERROR_DEFINITION.md  FEATURE_COMPLETE.md  FIXES_SUMMARY.md  Guide.txt  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PHASE4.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  STATUS.md  Ticket.md  components.json  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: DEPLOYMENT.md  ERROR_HANDLING_AND_UNDO_REDO.md  Error.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS.md  OPTIMIZATION_ANALYSIS.md  OPTIMIZATION_IMPLEMENTATION.md  README.md  RELEASE.md  RELEASE_CHECKLIST.md  RELEASE_GUIDE.md  SIGNING_FIX.md  STATUS.md  Ticket.md  Translation-Implementation-Progress.md
scripts/: README.md  prepare-release.ps1  release.ps1  sign-release.ps1  updater.json.template
src/: App.tsx  i18n.ts  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: README.md  icon.icns
src-tauri/migrations/: 0001_create_tables.sql  0002_add_subtasks.sql  0003_add_attachments.sql  0004_add_recurrence.sql  0005_add_templates.sql  0006_add_notification_preferences.sql  0007_add_gamification.sql  0008_add_attachment_size.sql  0009_add_translations.sql  0010_add_tags_and_relationships.sql  0011_add_pomodoro_sessions.sql  0012_add_blocking_index.sql  0013_add_attachment_versioning.sql  0014_add_rank_system.sql  0015_add_performance_indexes.sql
src-tauri/src/: attachments.rs  commands.rs  db.rs  main.rs  notifications.rs
src-tauri/src/services/: mod.rs  pomodoro_service.rs  project_service.rs  stats_service.rs  task_service.rs  template_service.rs  translation_service.rs
src/__tests__/: AttachmentInput.test.tsx
src/api/: tauriAdapter.ts
src/commands/: taskCommands.ts
src/components/: AddTaskModal.tsx  EditTaskModal.tsx  EmptyState.tsx  FilterBar.tsx  Header.tsx  KeyboardShortcutsModal.tsx  ProgressBar.tsx  RankBadge.tsx  RankPanel.tsx  RelatedTasksPanel.tsx  SearchBar.tsx  Sidebar.tsx  TagBadge.tsx  (+6 more)
(+57 files in other folders)
