[package]
name = "todo-app"
version = "0.1.0"
description = "A personal todo desktop app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["shell-open", "dialog-all", "fs-all", "path-all", "notification-all", "system-tray", "global-shortcut", "updater"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tempfile = "3.8"
reqwest = { version = "0.11", features = ["json"] }
sha2 = "0.10"
tokio = { version = "1", features = ["rt", "macros"] }
screenshots = "0.7"
image = "0.24"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
custom-protocol = ["tauri/custom-protocol"]

